// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas para el <GifExpertApp /> debe de mostrar los componentes correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas para el <GifExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Vikingos"
      key="Vikingos"
    />
    <GifGrid
      category="Peaky Blinders"
      key="Peaky Blinders"
    />
  </ol>
</Fragment>
`;
